force-app/main/default/objects/Historique_des_Comptes_Rendus__c/Historique_des_Comptes_Rendus__c.object-meta.xml
<CustomObject>
    <label>Historique des Comptes-Rendus</label>
    <nameField>
        <label>Historique des comptes rendu Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Historiques des Comptes-Rendus</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>