force-app/main/default/objects/Historique_des_Comptes_Rendus__c/fields/Compte_rendu__c.field-meta.xml
<CustomField>
    <fullName>Compte_rendu__c</fullName>
    <label>Compte rendu</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>