force-app/main/default/objects/Historique_des_Comptes_Rendus__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Historiques des Comptes-Rendus</relationshipLabel>
    <relationshipName>Historiques_des_Comptes_Rendus</relationshipName>
    <type>Lookup</type>
</CustomField>