force-app/main/default/objects/Historique_des_Comptes_Rendus__c/fields/Date_Du_Rappel__c.field-meta.xml
<CustomField>
    <fullName>Date_Du_Rappel__c</fullName>
    <label>Date Du Rappel</label>
    <type>DateTime</type>
</CustomField>