force-app/main/default/objects/Historique_des_Comptes_Rendus__c/fields/Planifier_un_rappel__c.field-meta.xml
<CustomField>
    <fullName>Planifier_un_rappel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Planifier un rappel</label>
    <type>Checkbox</type>
</CustomField>