force-app/main/default/objects/Historique_des_Comptes_Rendus__c/fields/Resultat_d_appel__c.field-meta.xml
<CustomField>
    <fullName>Resultat_d_appel__c</fullName>
    <label>Resultat d&#39;appel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>